--- a/src/jurnal-web-frontend/package.json
+++ b/src/jurnal-web-frontend/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
-    "@dfinity/agent": "^2.1.3",
-    "@dfinity/candid": "^2.1.3",
-    "@dfinity/principal": "^2.1.3",
+    "@dfinity/agent": "^3.0.0",
+    "@dfinity/auth-client": "^3.0.0",
+    "@dfinity/candid": "^3.0.0",
+    "@dfinity/identity": "^3.0.0",
+    "@dfinity/principal": "^3.0.0",
+    "@tailwindcss/vite": "^4.1.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,7 +21,7 @@
     "jsdom": "^22.1.0",
     "sass": "^1.63.6",
     "typescript": "^5.1.3",
-    "vite": "^4.3.9",
+    "vite": "^7.0.5",
     "vite-plugin-environment": "^1.1.3",
     "vitest": "^2.0.5"
   },
