--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "lucide-react": "^0.525.0",
+    "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.7.1",
     "tailwindcss": "^4.1.11"
   }
 }
